--- a/FamilyX/FamilyX/Storyboards/FamilyTree.storyboard
+++ b/FamilyX/FamilyX/Storyboards/FamilyTree.storyboard
@@ -24,7 +24,7 @@
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Znf-gS-uFJ">
                                                 <rect key="frame" x="0.0" y="0.0" width="1000" height="1800"/>
-                                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="1000" id="H2e-ov-yuQ"/>
                                                     <constraint firstAttribute="height" constant="1800" id="YK8-kO-cgZ"/>
@@ -71,6 +71,18 @@
                                     <action selector="btn_add_node:" destination="oD6-Hy-aUn" eventType="touchUpInside" id="5hF-eI-Gjr"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEN-P8-NTc">
+                                <rect key="frame" x="166" y="792" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="0na-WF-6jg"/>
+                                    <constraint firstAttribute="width" constant="50" id="oIE-Kw-Bs6"/>
+                                </constraints>
+                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="add"/>
+                                <connections>
+                                    <action selector="btn_add_child:" destination="oD6-Hy-aUn" eventType="touchUpInside" id="qaY-e5-zPI"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yqG-tj-Fs5">
                                 <rect key="frame" x="344" y="792" width="50" height="50"/>
                                 <constraints>
@@ -89,6 +101,7 @@
                         <constraints>
                             <constraint firstItem="maN-ZW-bsH" firstAttribute="centerY" secondItem="yqG-tj-Fs5" secondAttribute="centerY" id="0AB-hN-q5r"/>
                             <constraint firstItem="v0M-QC-2WM" firstAttribute="bottom" secondItem="j02-v7-cpJ" secondAttribute="bottom" constant="20" id="9eY-6N-8wH"/>
+                            <constraint firstItem="v0M-QC-2WM" firstAttribute="bottom" secondItem="MEN-P8-NTc" secondAttribute="bottom" constant="20" id="Afw-UN-VPw"/>
                             <constraint firstItem="1kA-9W-pvf" firstAttribute="trailing" secondItem="v0M-QC-2WM" secondAttribute="trailing" id="JKu-7N-w4o"/>
                             <constraint firstItem="maN-ZW-bsH" firstAttribute="trailing" secondItem="yqG-tj-Fs5" secondAttribute="leading" constant="-10" id="KjG-kf-EVh"/>
                             <constraint firstAttribute="bottom" secondItem="1kA-9W-pvf" secondAttribute="bottom" id="UlR-1J-i5s"/>
@@ -96,6 +109,7 @@
                             <constraint firstItem="1kA-9W-pvf" firstAttribute="top" secondItem="9va-4S-D7r" secondAttribute="top" id="ffx-3P-QNY"/>
                             <constraint firstItem="maN-ZW-bsH" firstAttribute="leading" secondItem="j02-v7-cpJ" secondAttribute="trailing" constant="10" id="gml-f7-5zb"/>
                             <constraint firstItem="v0M-QC-2WM" firstAttribute="bottom" secondItem="maN-ZW-bsH" secondAttribute="bottom" constant="20" id="kf1-7a-xF4"/>
+                            <constraint firstItem="j02-v7-cpJ" firstAttribute="leading" secondItem="MEN-P8-NTc" secondAttribute="trailing" constant="10" id="oW9-9l-JVt"/>
                             <constraint firstItem="v0M-QC-2WM" firstAttribute="bottom" secondItem="yqG-tj-Fs5" secondAttribute="bottom" constant="20" id="vYj-Az-LS1"/>
                             <constraint firstItem="v0M-QC-2WM" firstAttribute="trailing" secondItem="yqG-tj-Fs5" secondAttribute="trailing" constant="20" id="yaU-ty-G02"/>
                         </constraints>
@@ -109,7 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KF2-Z9-LsS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2546" y="378"/>
+            <point key="canvasLocation" x="-2546.376811594203" y="377.67857142857139"/>
         </scene>
         <!--Add People View Controller-->
         <scene sceneID="f0Y-px-7Jl">
@@ -547,6 +561,9 @@
         <image name="zoom_out" width="48" height="48"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
