Complete navigation, login, sign up and side menu bar

--- a/FamilyX/FamilyTree/Storyboards/FamilyTree.storyboard
+++ b/FamilyX/FamilyTree/Storyboards/FamilyTree.storyboard
@@ -8,10 +8,90 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--List Family Tree View Controller-->
+        <scene sceneID="XlD-hL-2fX">
+            <objects>
+                <viewController storyboardIdentifier="ListFamilyTreeViewController" id="Ppe-tW-oS0" customClass="ListFamilyTreeViewController" customModule="FamilyTree" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6KR-3y-MUe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jrP-io-Mkx">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListFamilyTreeTableViewCell" rowHeight="103" id="vjN-mn-a8D" customClass="ListFamilyTreeTableViewCell" customModule="FamilyTree" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="103"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vjN-mn-a8D" id="dvT-B7-bvi">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="103"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cgo-w4-uhC">
+                                                    <rect key="frame" x="20" y="21.5" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="dYY-l7-UMR"/>
+                                                        <constraint firstAttribute="height" constant="60" id="mcF-RG-feE"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9q-hC-Q7v">
+                                                    <rect key="frame" x="90" y="21.5" width="314" height="17"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oeY-lS-9WD">
+                                                    <rect key="frame" x="90" y="43.5" width="314" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="oeY-lS-9WD" firstAttribute="centerX" secondItem="U9q-hC-Q7v" secondAttribute="centerX" id="054-TW-JPb"/>
+                                                <constraint firstItem="oeY-lS-9WD" firstAttribute="trailing" secondItem="U9q-hC-Q7v" secondAttribute="trailing" id="8RW-mR-UhK"/>
+                                                <constraint firstItem="U9q-hC-Q7v" firstAttribute="leading" secondItem="cgo-w4-uhC" secondAttribute="trailing" constant="10" id="HMf-Pn-b1k"/>
+                                                <constraint firstItem="cgo-w4-uhC" firstAttribute="leading" secondItem="dvT-B7-bvi" secondAttribute="leading" constant="20" id="Nca-kd-KaY"/>
+                                                <constraint firstItem="cgo-w4-uhC" firstAttribute="centerY" secondItem="dvT-B7-bvi" secondAttribute="centerY" id="V3X-fW-rSj"/>
+                                                <constraint firstItem="oeY-lS-9WD" firstAttribute="top" secondItem="U9q-hC-Q7v" secondAttribute="bottom" constant="5" id="XDH-ep-08s"/>
+                                                <constraint firstItem="U9q-hC-Q7v" firstAttribute="top" secondItem="cgo-w4-uhC" secondAttribute="top" id="d6M-6x-QO0"/>
+                                                <constraint firstAttribute="trailing" secondItem="U9q-hC-Q7v" secondAttribute="trailing" constant="10" id="qyK-Oc-aA7"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="img_avatar" destination="cgo-w4-uhC" id="YYJ-1W-fYo"/>
+                                            <outlet property="lbl_description" destination="oeY-lS-9WD" id="lT2-an-0lL"/>
+                                            <outlet property="lbl_name" destination="U9q-hC-Q7v" id="pj2-bD-8DN"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Ppe-tW-oS0" id="PzT-Kb-Mh7"/>
+                                    <outlet property="delegate" destination="Ppe-tW-oS0" id="6d2-Pb-j9p"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="I3Q-0N-ibJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jrP-io-Mkx" firstAttribute="leading" secondItem="I3Q-0N-ibJ" secondAttribute="leading" id="1tw-pa-WsN"/>
+                            <constraint firstItem="I3Q-0N-ibJ" firstAttribute="trailing" secondItem="jrP-io-Mkx" secondAttribute="trailing" id="Dk4-J3-ySh"/>
+                            <constraint firstItem="jrP-io-Mkx" firstAttribute="top" secondItem="I3Q-0N-ibJ" secondAttribute="top" id="Q0N-eL-hgt"/>
+                            <constraint firstItem="I3Q-0N-ibJ" firstAttribute="bottom" secondItem="jrP-io-Mkx" secondAttribute="bottom" id="QU5-UB-yPu"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tbl_trees" destination="jrP-io-Mkx" id="qnc-cM-83O"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L4t-QX-LSp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2097.1014492753625" y="172.76785714285714"/>
+        </scene>
         <!--Edit Family Tree View Controller-->
         <scene sceneID="cdc-qd-CsR">
             <objects>
-                <viewController storyboardIdentifier="EditFamilyTreeViewController" id="oD6-Hy-aUn" customClass="EditFamilyTreeViewController" customModule="FamilyX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditFamilyTreeViewController" id="oD6-Hy-aUn" customClass="EditFamilyTreeViewController" customModule="FamilyTree" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9va-4S-D7r">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -100,7 +180,7 @@
         <!--Add People View Controller-->
         <scene sceneID="f0Y-px-7Jl">
             <objects>
-                <viewController storyboardIdentifier="AddPeopleViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="xNL-Ah-NR2" customClass="AddPeopleViewController" customModule="FamilyX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddPeopleViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="xNL-Ah-NR2" customClass="AddPeopleViewController" customModule="FamilyTree" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vXs-B9-oiI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -494,7 +574,7 @@
         <!--Edit People View Controller-->
         <scene sceneID="Q5Q-Vq-Vqs">
             <objects>
-                <viewController storyboardIdentifier="EditPeopleViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="tcz-gz-RGm" customClass="EditPeopleViewController" customModule="FamilyX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditPeopleViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="tcz-gz-RGm" customClass="EditPeopleViewController" customModule="FamilyTree" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="U5h-2Z-9IO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
