--- a/FamilyX/FamilyTree/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/FamilyX/FamilyTree/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -1,46 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uTZ-FM-bgQ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
+        <scene sceneID="7Sq-1A-Bbb">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="RkF-jd-Nbj">
+                <viewController storyboardIdentifier="LoginViewController" id="uTZ-FM-bgQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bXU-BU-61j">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add" translatesAutoresizingMaskIntoConstraints="NO" id="J4o-yH-C6F">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <color key="backgroundColor" red="0.88301753999999999" green="0.94114106890000004" blue="0.94117814300000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FamilyX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sea-xl-76q">
+                                <rect key="frame" x="79" y="413.5" width="256" height="69.5"/>
+                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="60"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="XQh-6v-L4E"/>
-                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                        <viewLayoutGuide key="safeArea" id="djI-mD-wt0"/>
+                        <color key="backgroundColor" red="0.53333333333333333" green="0.35686274509803922" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="J4o-yH-C6F" firstAttribute="leading" secondItem="XQh-6v-L4E" secondAttribute="leading" id="lcu-Hc-BJE"/>
-                            <constraint firstItem="J4o-yH-C6F" firstAttribute="top" secondItem="RkF-jd-Nbj" secondAttribute="top" id="qSa-wI-kyu"/>
-                            <constraint firstItem="XQh-6v-L4E" firstAttribute="trailing" secondItem="J4o-yH-C6F" secondAttribute="trailing" id="vBq-vI-ubF"/>
-                            <constraint firstAttribute="bottom" secondItem="J4o-yH-C6F" secondAttribute="bottom" id="z39-7F-R2t"/>
+                            <constraint firstItem="sea-xl-76q" firstAttribute="centerX" secondItem="bXU-BU-61j" secondAttribute="centerX" id="32b-Uz-rqz"/>
+                            <constraint firstItem="sea-xl-76q" firstAttribute="centerY" secondItem="bXU-BU-61j" secondAttribute="centerY" id="xTi-sy-Rca"/>
                         </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KwI-7g-4Kt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-128" y="315"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="add" width="48" height="48"/>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
