--- a/FamilyX/FamilyTree/Storyboards/SplashViewController.xib
+++ b/FamilyX/FamilyTree/Storyboards/SplashViewController.xib
@@ -2,14 +2,12 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SplashViewController" customModule="FamilyX" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SplashViewController" customModule="FamilyTree" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="iN0-l3-epB" id="tfC-B1-gKe"/>
             </connections>
@@ -21,22 +19,10 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ilz-OW-uAy">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NGU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7e-OD-HCl">
-                            <rect key="frame" x="149" y="383" width="116" height="52.5"/>
-                            <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="45"/>
-                            <color key="textColor" systemColor="systemBackgroundColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="i7e-OD-HCl" firstAttribute="centerX" secondItem="Ilz-OW-uAy" secondAttribute="centerX" id="0Xw-14-hLN"/>
-                        <constraint firstItem="i7e-OD-HCl" firstAttribute="centerY" secondItem="Ilz-OW-uAy" secondAttribute="centerY" id="Qcd-NL-7a5"/>
-                    </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" red="0.4383518696" green="0.55553054810000002" blue="0.33329337840000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" red="0.53333333333333333" green="0.35686274509803922" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ilz-OW-uAy" secondAttribute="trailing" id="TdU-HV-mCY"/>
                 <constraint firstItem="Ilz-OW-uAy" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="YnB-IW-PZV"/>
@@ -46,9 +32,4 @@
             <point key="canvasLocation" x="125" y="69"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
