--- a/FamilyX/FamilyTree/Storyboards/FamilyTree.storyboard
+++ b/FamilyX/FamilyTree/Storyboards/FamilyTree.storyboard
@@ -20,37 +20,48 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListFamilyTreeTableViewCell" rowHeight="103" id="vjN-mn-a8D" customClass="ListFamilyTreeTableViewCell" customModule="FamilyTree" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="103"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListFamilyTreeTableViewCell" rowHeight="85" id="vjN-mn-a8D" customClass="ListFamilyTreeTableViewCell" customModule="FamilyTree" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vjN-mn-a8D" id="dvT-B7-bvi">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="103"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="85"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cgo-w4-uhC">
-                                                    <rect key="frame" x="20" y="21.5" width="60" height="60"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tree_no_image" translatesAutoresizingMaskIntoConstraints="NO" id="cgo-w4-uhC">
+                                                    <rect key="frame" x="20" y="17.5" width="50" height="50"/>
+                                                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="60" id="dYY-l7-UMR"/>
-                                                        <constraint firstAttribute="height" constant="60" id="mcF-RG-feE"/>
+                                                        <constraint firstAttribute="width" constant="50" id="dYY-l7-UMR"/>
+                                                        <constraint firstAttribute="height" constant="50" id="mcF-RG-feE"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9q-hC-Q7v">
-                                                    <rect key="frame" x="90" y="21.5" width="314" height="17"/>
+                                                    <rect key="frame" x="80" y="17.5" width="324" height="17"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oeY-lS-9WD">
-                                                    <rect key="frame" x="90" y="43.5" width="314" height="14.5"/>
+                                                    <rect key="frame" x="80" y="39.5" width="324" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vsL-Iy-iqw">
+                                                    <rect key="frame" x="10" y="84" width="394" height="1"/>
+                                                    <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="6cT-N2-1cI"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="oeY-lS-9WD" firstAttribute="centerX" secondItem="U9q-hC-Q7v" secondAttribute="centerX" id="054-TW-JPb"/>
+                                                <constraint firstAttribute="bottom" secondItem="vsL-Iy-iqw" secondAttribute="bottom" id="3kT-zQ-nDI"/>
                                                 <constraint firstItem="oeY-lS-9WD" firstAttribute="trailing" secondItem="U9q-hC-Q7v" secondAttribute="trailing" id="8RW-mR-UhK"/>
+                                                <constraint firstItem="vsL-Iy-iqw" firstAttribute="leading" secondItem="dvT-B7-bvi" secondAttribute="leading" constant="10" id="HGE-pB-VUR"/>
                                                 <constraint firstItem="U9q-hC-Q7v" firstAttribute="leading" secondItem="cgo-w4-uhC" secondAttribute="trailing" constant="10" id="HMf-Pn-b1k"/>
+                                                <constraint firstAttribute="trailing" secondItem="vsL-Iy-iqw" secondAttribute="trailing" constant="10" id="Kzx-SL-Sz5"/>
                                                 <constraint firstItem="cgo-w4-uhC" firstAttribute="leading" secondItem="dvT-B7-bvi" secondAttribute="leading" constant="20" id="Nca-kd-KaY"/>
                                                 <constraint firstItem="cgo-w4-uhC" firstAttribute="centerY" secondItem="dvT-B7-bvi" secondAttribute="centerY" id="V3X-fW-rSj"/>
                                                 <constraint firstItem="oeY-lS-9WD" firstAttribute="top" secondItem="U9q-hC-Q7v" secondAttribute="bottom" constant="5" id="XDH-ep-08s"/>
@@ -918,10 +929,14 @@
     </scenes>
     <resources>
         <image name="person.crop.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="tree_no_image" width="48" height="48"/>
         <image name="zoom_in" width="48" height="48"/>
         <image name="zoom_out" width="48" height="48"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
