Complete search tree, load user to share tree

--- a/FamilyX/FamilyTree/Storyboards/Base.lproj/Main.storyboard
+++ b/FamilyX/FamilyTree/Storyboards/Base.lproj/Main.storyboard
@@ -810,6 +810,33 @@
             </objects>
             <point key="canvasLocation" x="-151" y="-106"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="5ir-8U-xJx">
+            <objects>
+                <viewController id="Nze-wy-cl9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HJc-3Q-ADw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KfA-Ns-zot">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Zna-Bq-1et"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="KfA-Ns-zot" firstAttribute="leading" secondItem="Zna-Bq-1et" secondAttribute="leading" id="JQq-Di-vxg"/>
+                            <constraint firstItem="Zna-Bq-1et" firstAttribute="trailing" secondItem="KfA-Ns-zot" secondAttribute="trailing" id="SA9-RP-ixI"/>
+                            <constraint firstItem="Zna-Bq-1et" firstAttribute="bottom" secondItem="KfA-Ns-zot" secondAttribute="bottom" id="oim-Hr-H4X"/>
+                            <constraint firstItem="KfA-Ns-zot" firstAttribute="top" secondItem="Zna-Bq-1et" secondAttribute="top" id="vcR-oy-2Az"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AJQ-tQ-gnG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-152" y="609"/>
+        </scene>
         <!--Side Menu Navigation Controller-->
         <scene sceneID="CvH-Wl-GJU">
             <objects>
