--- a/FamilyX/FamilyTree/Storyboards/FamilyTree.storyboard
+++ b/FamilyX/FamilyTree/Storyboards/FamilyTree.storyboard
@@ -812,7 +812,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1kA-9W-pvf">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="94" width="414" height="802"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EvO-0V-Qfm">
                                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1800"/>
@@ -866,17 +866,44 @@
                                     <action selector="btn_zoom_in:" destination="oD6-Hy-aUn" eventType="touchUpInside" id="iR7-tc-JRm"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZQ-zo-0rU">
+                                <rect key="frame" x="0.0" y="44" width="414" height="50"/>
+                                <subviews>
+                                    <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="9aX-gf-U3G">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h6W-vd-C9p">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="9aX-gf-U3G" firstAttribute="top" secondItem="KZQ-zo-0rU" secondAttribute="top" id="JaI-fy-poP"/>
+                                    <constraint firstAttribute="bottom" secondItem="h6W-vd-C9p" secondAttribute="bottom" id="Yw0-1V-uiN"/>
+                                    <constraint firstAttribute="trailing" secondItem="h6W-vd-C9p" secondAttribute="trailing" id="bCC-6e-6vo"/>
+                                    <constraint firstItem="h6W-vd-C9p" firstAttribute="top" secondItem="KZQ-zo-0rU" secondAttribute="top" id="g7l-js-u78"/>
+                                    <constraint firstItem="h6W-vd-C9p" firstAttribute="leading" secondItem="KZQ-zo-0rU" secondAttribute="leading" id="h3M-f3-gws"/>
+                                    <constraint firstAttribute="trailing" secondItem="9aX-gf-U3G" secondAttribute="trailing" id="hCk-Cd-VIP"/>
+                                    <constraint firstAttribute="bottom" secondItem="9aX-gf-U3G" secondAttribute="bottom" id="l9j-gL-TNL"/>
+                                    <constraint firstItem="9aX-gf-U3G" firstAttribute="leading" secondItem="KZQ-zo-0rU" secondAttribute="leading" id="u8f-GJ-B0D"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="v0M-QC-2WM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="maN-ZW-bsH" firstAttribute="centerY" secondItem="yqG-tj-Fs5" secondAttribute="centerY" id="0AB-hN-q5r"/>
+                            <constraint firstItem="v0M-QC-2WM" firstAttribute="trailing" secondItem="KZQ-zo-0rU" secondAttribute="trailing" id="F4w-lk-4r0"/>
                             <constraint firstItem="1kA-9W-pvf" firstAttribute="trailing" secondItem="v0M-QC-2WM" secondAttribute="trailing" id="JKu-7N-w4o"/>
                             <constraint firstItem="maN-ZW-bsH" firstAttribute="trailing" secondItem="yqG-tj-Fs5" secondAttribute="leading" constant="-10" id="KjG-kf-EVh"/>
                             <constraint firstAttribute="bottom" secondItem="1kA-9W-pvf" secondAttribute="bottom" id="UlR-1J-i5s"/>
                             <constraint firstItem="1kA-9W-pvf" firstAttribute="leading" secondItem="v0M-QC-2WM" secondAttribute="leading" id="bi7-yK-MBY"/>
-                            <constraint firstItem="1kA-9W-pvf" firstAttribute="top" secondItem="9va-4S-D7r" secondAttribute="top" id="ffx-3P-QNY"/>
+                            <constraint firstItem="KZQ-zo-0rU" firstAttribute="leading" secondItem="v0M-QC-2WM" secondAttribute="leading" id="e6U-Ha-epS"/>
+                            <constraint firstItem="1kA-9W-pvf" firstAttribute="top" secondItem="v0M-QC-2WM" secondAttribute="top" constant="50" id="ffx-3P-QNY"/>
                             <constraint firstItem="v0M-QC-2WM" firstAttribute="bottom" secondItem="maN-ZW-bsH" secondAttribute="bottom" constant="20" id="kf1-7a-xF4"/>
+                            <constraint firstItem="1kA-9W-pvf" firstAttribute="top" secondItem="KZQ-zo-0rU" secondAttribute="bottom" id="naK-gO-RJr"/>
+                            <constraint firstItem="KZQ-zo-0rU" firstAttribute="top" secondItem="v0M-QC-2WM" secondAttribute="top" id="t3D-a1-dLe"/>
                             <constraint firstItem="v0M-QC-2WM" firstAttribute="bottom" secondItem="yqG-tj-Fs5" secondAttribute="bottom" constant="20" id="vYj-Az-LS1"/>
                             <constraint firstItem="v0M-QC-2WM" firstAttribute="trailing" secondItem="yqG-tj-Fs5" secondAttribute="trailing" constant="20" id="yaU-ty-G02"/>
                         </constraints>
@@ -890,7 +917,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KF2-Z9-LsS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-794" y="1265"/>
+            <point key="canvasLocation" x="-794.20289855072474" y="1264.9553571428571"/>
         </scene>
         <!--Add People View Controller-->
         <scene sceneID="f0Y-px-7Jl">
